--- a/pvp.html
+++ b/pvp.html
@@ -86,8 +86,8 @@
       <div id="but" style=" align-items: center;">
         <button  style="width: 500px;">Main Image</button>
       </div>
-      <div>
-        <button style="width: 500px; margin-left: 120px;" id="butt">PVP iS</button>
+      <div id="butt">
+        <button style="width: 500px; margin-left: 120px;" >PVP iS</button>
       </div>
     </div>
 
