--- a/kipon.html
+++ b/kipon.html
@@ -17,10 +17,10 @@
         <p><a style="color: white ;" href="pvp.html">PVP Games</a></p>
       </div>
       <div class="info">
-        <div><a style="color: black ;" href="">Home</a></div>
+        <div><a style="color: black ;" href="home.html">Home</a></div>
         <div id="gamee">Games</div>
-        <div><a style="color: black ;" href="">Careers</a></div>
-        <div><a style="color: black ;" href="">About</a></div>
+        <div><a style="color: black ;" href="careers.html">Careers</a></div>
+        <div><a style="color: black ;" href="about.html">About</a></div>
         <div><a style="color: black ;" href="">Contact</a></div>
       </div>
     </div>
