--- a/pvp.html
+++ b/pvp.html
@@ -23,10 +23,10 @@
       <div>
         <div class="header">
           <div class="info">
-            <div><a href="">Home</a></div>
+            <div><a href="home.html">Home</a></div>
             <div id="gamee"><a href="kipon.html">Games</a></div>
-            <div><a href="">Careers</a></div>
-            <div><a href="">About</a></div>
+            <div><a href="careers.html">Careers</a></div>
+            <div><a href="about.html">About</a></div>
             <div><a href="">Contact</a></div>
           </div>
         </div>
