--- a/robotrix.html
+++ b/robotrix.html
@@ -17,10 +17,10 @@
             <p><a style="color: white ;" href="pvp.html">PVP Games</a></p>
           </div>
           <div class="info">
-            <div><a style="color: black ;" href="">Home</a></div>
+            <div><a style="color: black ;" href="home.html">Home</a></div>
             <div id="gamee">Games</div>
-            <div><a style="color: black ;" href="">Careers</a></div>
-            <div><a style="color: black ;" href="">About</a></div>
+            <div><a style="color: black ;" href="careers.html">Careers</a></div>
+            <div><a style="color: black ;" href="about.html">About</a></div>
             <div><a style="color: black ;" href="">Contact</a></div>
           </div>
         </div>
@@ -29,7 +29,7 @@
            <ul id="pan">
             <li id="li" style="cursor: pointer;"><a href="kipon.html">Brawl Stars</a></li>
             <li id="li" style="cursor: pointer;"><a href="robotrix.html">Robotrix</a></li>
-            <li id="li" style="cursor: pointer;"><a href="TreasureBox.html">Treasure Box</a></li>
+            <li id="li" style="cursor: pointer;"><a href="treasurebox.html">Treasure Box</a></li>
            </ul>
         </div>
       </div>
