--- a/robotrix.html
+++ b/robotrix.html
@@ -69,7 +69,7 @@
         <div>
           <img  class="img3" src="16.png" alt="">
         </div>
-        <p style="font-size: 50px; font-family:'Times New Roman', Times, serif ; margin-left: 30px;">Reviews</p>
+        <p class="rec" style="font-size: 50px; font-family:'Times New Roman', Times, serif ; margin-left: 30px;">Reviews</p>
       </div>
 
    <div style="width: 100%;">
@@ -116,7 +116,7 @@
         <p><a style="color: white;" href="pvp.html">PVP Games</a></p>
       </div>
 
-      <p style="text-align: center; padding: 2%; font-size: 30px; font-family: 'Times New Roman', Times, serif;">An Immersive Gaming Experience</p>
+      <p id="texttt" style="text-align: center; padding: 2%; font-size: 30px; font-family: 'Times New Roman', Times, serif;">An Immersive Gaming Experience</p>
       <hr id="hrr" style="background:#000000; width:70%; height:2px; margin-left: 230px; margin-right: 230px;">
       <div style="padding: 2%; margin-left: 150px; display: flex; cursor: pointer;">
         <table class="tbl" style="width: 900px;">
